--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "format:js": "wp-scripts format-js",
     "lint:js": "wp-scripts lint-js",
+    "fix:js": "wp-scripts lint-js --fix",
     "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:md:js": "wp-scripts lint-md-js",
     "lint:pkg-json": "wp-scripts lint-pkg-json"
