👌 IMPROVE: Adjust linting

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,9 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
+[*.js]
+indent_style = tab
+indent_size = 2
+
 [*.txt]
 end_of_line = crlf
